mostly updating reply to R1

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -124,19 +124,36 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
 \section*{Introduction}
 
-    Representing an ecological community as a network summarises both species composition and interactions between species. A tabulation of the nodes (species) and their relative abundances forms the basis for traditional metrics of community composition such as alpha diversity. A network framework combines this tabulation of nodes with a list of interactions (links between nodes) so that networks provide additional, higher-order information on community structure. Despite this additional information, empirical descriptions of ecological networks are still often limited by a lack of data or tools to adequately incorporate variation in interactions into networks. That is, whether the network is assembled based on aggregated data, a single intensive ``snapshot" sample, or expert knowledge, interactions are assumed to occur deterministically wherever and whenever the community is observed~\citep{Olesen2011a}. 
+    Representing an ecological community as a network allows ecologists to address both community composition and the interactions between species~\citep{Roslin2016}. Identifying these interactions is a crucial step towards understanding (and predicting) the effects that species have on each other and the response of the community as a whole to external perturbations~\citep{Bartomeus2016,Giron2018}. Importantly, information is conveyed both by the presence and \emph{absence} of links between species. Presences and absences are not, however, equally certain. An observed link definitely occurred, but there are multiple reasons why a given link may not be observed. 
 
 
-    The assumption of static communities contrasts with the known stochasticity of ecological communities~\citep{Gotelli2000}. Community composition and abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012}, time~\citep{Kitching1987,Olesen2011a}, and between individuals~\citep{Pires2011a,Fodrie2015,Novak2015}. Worse, variability in community composition and interactions may not be closely related. The removal of a species from a site will obviously also remove its interactions but, conversely, the co-occurrence of potentially interacting species does not guarantee that the species will interact at a given place and time. Interactions can be lost if the interaction partners remain present but are separated in time or are too rare to detect each other~\citep{Tylianakis2010}. Interactions can also fail to occur because of environmental contingencies~\citep{Poisot2015} or individual preferences~\citep{Fodrie2015}. 
+    First and foremost, ecological communities are known to be stochastic~\citep{Gotelli2000}. Community composition and abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}, leading to variation in encounter probabilites and hence in interactions~\citep{Vazquez2005,Poisot2015,Graham2018}. Species must co-occur in order to be observed interacting, so any variation in co-occurrence will create variation in the set of observed interactions~\citep{Gravel2013}. Even assuming constant co-occurrence within a given study system, changing abundances can affect interactions if species which would otherwise interact become too rare to detect each other~\citep{Tylianakis2010}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012,Emer2018}, time~\citep{Kitching1987,Olesen2011a,Lopez2017}, between individuals~\citep{Pires2011a,Fodrie2015,Novak2015}, throughout life cycles~\citep{Preston2014,Clegg2018}, and with environmental conditions~\citep{Poisot2015}.
 
 
-    Beyond ``true" variation in network structure, several researchers have noted the effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Bluthgen2007}). An assessment of the accumulation of interactions with increasing sampling effort suggests that it is even more challenging to document interactions than species~\citep{Poisot2012,Bartomeus,others}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Poisot2016}. Early work in this vein includes food-web models using likelihood-based approaches~\citep{Allesina2008} or Gaussian~\citep{Williams2010} or binomial~\citep{Rohr2016} probability functions for each possible interaction. These models may include information about species' traits~\citep{Rohr2016} or attempt to reproduce empirical network structures using a set of simple rules~\citep{Allesina2008,Williams2010}.
+    Beyond ``true" variation in network structure, several researchers have noted the effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Bluthgen2007}). An assessment of the accumulation of interactions with increasing sampling effort suggests that it is even more challenging to correctly document interactions than species~\citep{Poisot2012,Bartomeus2013,Jordano2016,Giron2018,Graham2018}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Bartomeeus2013,Poisot2016}. Efforts in this vein usually take the form of creating model food webs that approximate observed empirical networks~\citep{Allesina2008,Williams2010,Rohr2016}. These models may be based on species traits and/or abundances~\citep{Rohr2016,Graham2018,more} or on simple abstract rules~\citep{Allesina2008,Williams2010}. Such networks provide an important ''reality check'' by allowing us to compare the observed network to what would be expected under a particular set of assumptions~\citep{Bartomeus2013,Weinstein??}. They allow us to estimate the numbers of interactions which have not been observed and predict which unobserved interactions are most likely~\citep{Bartomeus2013}.
+
+    
+    [[Trying to give a more precise summary of our goal here.]]
+    While predictive networks acknowledge the variability of interaction networks, they do not quantify the different degrees of uncertainty about different interactions. In fact, many assume that all interactions which actually occur have been observed and that there are no false positives~\citep{Bartomeus2016,others?}. This amounts of assuming that, while the strengths or frequencies of interactions may vary, we can be certain about the structure of the binary presence or absence of interactions. Other models assume that the probability of interaction is constant during the sampling period~\citep{Bartomeus2013}.  Here we show that both assumptions are unlikely due to the many layers of uncertainty affecting the observation of interactions~\citep{Jordano2016}. Increased or improved sampling could reduce many of these sources uncertainty, but we suspect that most research groups limit sampling due to time or budget constraints. Given that increased sampling is not likely to be a viable solution to the problem of uncertainty about unobserved interactions (see Box 1), we offer a Bayesian framework to capture the uncertainty surrounding interactions which were not observed. This framework can be applied to any network type and does not require strong assumptions or pre-existing data about the study system, but can include such information if it is available.
 
 
-    Despite these efforts, we currently lack the quantitative methodology to deal with uncertainty generated by spatiotemporal variation in ecological interactions and by limited sampling. [[cite previous attempts]] Even in well-sampled networks, uneven sampling across species can lead to the inference that some species do not interact because they co-occur rarely or have not yet been observed together - even if they do interact when they do co-occur (see Fig.~\ref{histograms}). Nearly all network studies will thus neglect some interactions, necessitating an approach that acknowledges this uncertainty.
+    % Development of molecular sampling methods such as DNA barcoding hold great potential for uncovering interactions missed by other sampling methods (such as visit surveys)~\citep{Giron2018}, but these novel methods are also somewhat error-prone at present~\citep{}. 
+
+    % Accounting for differences in feasible (binary) interactions across life stages changes network structure~\citep{Clegg2018}.
+
+    % Representing an ecological community as a network summarises both species composition and interactions between species. A tabulation of the nodes (species) and their relative abundances forms the basis for traditional metrics of community composition such as alpha diversity. A network framework combines this tabulation of nodes with a list of interactions (links between nodes) so that networks provide additional, higher-order information on community structure. Despite this additional information, empirical descriptions of ecological networks are still often limited by a lack of data or tools to adequately incorporate variation in interactions into networks. That is, whether the network is assembled based on aggregated data, a single intensive ``snapshot" sample, or expert knowledge, interactions are assumed to occur deterministically wherever and whenever the community is observed~\citep{Olesen2011a}. 
 
 
-    In this study, we formalise the description of interactions between species as probabilities and develop analytical tools to capture the uncertainty in the estimation of these interactions. We focus on binary interactions as a first step, but the framework could be expanded to deal with interaction frequencies or strengths. To define the problem, we first identify different contributions to the uncertainty of an interaction and discuss the implications of each source of uncertainty for the properties of ecological networks. 
+    % The assumption of static communities contrasts with the known stochasticity of ecological communities~\citep{Gotelli2000}. Community composition and abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012}, time~\citep{Kitching1987,Olesen2011a}, and between individuals~\citep{Pires2011a,Fodrie2015,Novak2015}. Worse, variability in community composition and interactions may not be closely related. The removal of a species from a site will obviously also remove its interactions but, conversely, the co-occurrence of potentially interacting species does not guarantee that the species will interact at a given place and time. Interactions can be lost if the interaction partners remain present but are separated in time or are too rare to detect each other~\citep{Tylianakis2010}. Interactions can also fail to occur because of environmental contingencies~\citep{Poisot2015} or individual preferences~\citep{Fodrie2015}. 
+
+
+    % Beyond ``true" variation in network structure, several researchers have noted the effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Bluthgen2007}). An assessment of the accumulation of interactions with increasing sampling effort suggests that it is even more challenging to document interactions than species~\citep{Poisot2012,Bartomeus,others}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Poisot2016}. Early work in this vein includes food-web models using likelihood-based approaches~\citep{Allesina2008} or Gaussian~\citep{Williams2010} or binomial~\citep{Rohr2016} probability functions for each possible interaction. These models may include information about species' traits~\citep{Rohr2016} or attempt to reproduce empirical network structures using a set of simple rules~\citep{Allesina2008,Williams2010}.
+
+
+    % Despite these efforts, we currently lack the quantitative methodology to deal with uncertainty generated by spatiotemporal variation in ecological interactions and by limited sampling. [[cite previous attempts]] Even in well-sampled networks, uneven sampling across species can lead to the inference that some species do not interact because they co-occur rarely or have not yet been observed together - even if they do interact when they do co-occur (see Fig.~\ref{histograms}). Nearly all network studies will thus neglect some interactions, necessitating an approach that acknowledges this uncertainty.
+
+
+    % In this study, we formalise the description of interactions between species as probabilities and develop analytical tools to capture the uncertainty in the estimation of these interactions. We focus on binary interactions as a first step, but the framework could be expanded to deal with interaction frequencies or strengths. To define the problem, we first identify different contributions to the uncertainty of an interaction and discuss the implications of each source of uncertainty for the properties of ecological networks. 
 
 
     \subsection*{Why do some interactions \emph{not} occur?}
@@ -168,7 +185,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
         \subsubsection*{Detection uncertainty} 
 
-          Lastly, measurement errors are a pervasive source of uncertainty in the observation of ecological processes. Even if an interaction is feasible and occurs during sampling ($L = 1$ and $X = 1$), we may still fail to detect it. We may define the probability of detecting of an interaction, $D$, given the interaction is feasible and occurs, as a stochastic process with the associated probability $P(D|X=1,L=1)=\delta$. Detection failure could happen for many reasons (see~\citet{Wirta2014} for examples and partial solutions to them). Some sources of detection error can be minimised with appropriate sampling effort ($\delta$ will approach one with increasing number of samples), but other sources are often difficult to reduce (e.g. the occurrence of cryptic species might require molecular analysis for appropriate taxonomic identification as in~\citealt{Wirta2014,Frost2016}). Some types of interactions will have higher detection uncertainty than others (e.g., pollination or predation often take place very quickly while parasitism can last for months or years). Even long-term interactions, however, can be missed, especially if species are difficult to identify or if not all individuals of a species share the interaction. Parasites, for example, are often concentrated in only a few individuals~\citep{Lagrue2017}. If these infected individuals do not happen to be included in a sample, their interactoins will be missed.
+          Lastly, measurement errors are a pervasive source of uncertainty in the observation of ecological processes. Even if an interaction is feasible and occurs during sampling ($L = 1$ and $X = 1$), we may still fail to detect it. We may define the probability of detecting of an interaction, $D$, given the interaction is feasible and occurs, as a stochastic process with the associated probability $P(D|X=1,L=1)=\delta$. Detection failure could happen for many reasons (see~\citet{Wirta2014} for examples and partial solutions to them). Some sources of detection error can be minimised with appropriate sampling effort ($\delta$ will approach one with increasing number of samples), but other sources are often difficult to reduce (e.g. the occurrence of cryptic species might require molecular analysis for appropriate taxonomic identification as in~\citealt{Wirta2014,Frost2016}). Some types of interactions will have higher detection uncertainty than others (e.g., pollination or predation often take place very quickly while parasitism can last for months or years). Even long-term interactions, however, can be missed, especially if species are difficult to identify or if not all individuals of a species share the interaction. Parasites, for example, are often concentrated in only a few individuals~\citep{Lagrue2017}. If these infected individuals do not happen to be included in a sample, their interactions will be missed.
 
 
           To sum up, the absence of an interaction on a given day could therefore be because it was not feasible [$P(L) = 0$], was feasible but did not occur because of local conditions during sampling ($P(X|L=1) = 0$], or was feasible and occurred during sampling but could not be observed [$P(D|X=1,L=1)=0$]. Note that some exteral factors can affect both process and detection uncertainty. For example, rare species are less likely to interact at a given site due to neutral processes (process uncertainty)~\citep{}. Interactions involving rare species are also less likely to be detected (detection uncertainty), unless more sampling effort is focused on rare than common species~\citep{}. Similarly, bad weather can make interactions such as pollination less likely by reducing pollinator activity~\citep{}. For those pollinators which do venture forth in poor conditions, bad weather might also reduce visibility and therefore increase detection uncertainty.
@@ -193,24 +210,30 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
   \subsection*{A Bayesian framework for interaction probabilities}
 
-    We are most interested in how to quantify an interaction probability, and its associated uncertainty, for interactions that have not been observed. Assume that a pair of species has been observed co-occurring $n$ times and interacting in $k = 0$ cases. We want to know the probability $\lambda$ that the species would be observed interacting if not constrained by local conditions, imperfect detection, etc. We can consider the occurrence of an interaction as a Bernoulli trail where the number of successes ($k$) over $n$ trials will follow a binomial distribution (see~\emph{Appendix S2} for a full description of the mathematical framework). In this framework, the maximum likelihood estimate (MLE) for $\lambda$ is:
+    % Maybe we can move much of this to the Box and satisfy reviewer 1
 
-        \begin{equation}
-          \lambda_{MLE} = \frac{k}{n}  .
-          \label{theta_MLE}
-        \end{equation}
+
+    % We are most interested in how to quantify an interaction probability, and its associated uncertainty, for interactions that have not been observed. For interactions which have been observed, methods already exist to quantify the probability of the interaction. 
+
+
+    % Assume that a pair of species has been observed co-occurring $n$ times and interacting in $k = 0$ cases. We want to know the probability $\lambda$ that the species would be observed interacting if not constrained by local conditions, imperfect detection, etc. We can consider the occurrence of an interaction as a Bernoulli trail where the number of successes ($k$) over $n$ trials will follow a binomial distribution (see~\emph{Appendix S2} for a full description of the mathematical framework). In this framework, the maximum likelihood estimate (MLE) for $\lambda$ is:
+
+    %     \begin{equation}
+    %       \lambda_{MLE} = \frac{k}{n}  .
+    %       \label{theta_MLE}
+    %     \end{equation}
   
 
-    Note that $\lambda$ is not a point estimate but rather a random variable with an unknown distribution. This means that if $k = 0$ in a given sample, this does not necessarily imply that the two species will never interact. Rather, $k = 0$ implies that `no interaction' is the most likely outcome when the species do co-occur but there is nonetheless some chance that the two species \emph{could} interact. In the situation where $k>0$, in contrast, we are sure that the interaction is feasible ($L = 1$). If $n>k>0$, the interaction is feasible but there may be local constraints ($X = 0$) or detection errors ($D<1$) causing the interaction not to be observed in some samples. 
+    % Note that $\lambda$ is not a point estimate but rather a random variable with an unknown distribution. This means that if $k = 0$ in a given sample, this does not necessarily imply that the two species will never interact. Rather, $k = 0$ implies that `no interaction' is the most likely outcome when the species do co-occur but there is nonetheless some chance that the two species \emph{could} interact. In the situation where $k>0$, in contrast, we are sure that the interaction is feasible ($L = 1$). If $n>k>0$, the interaction is feasible but there may be local constraints ($X = 0$) or detection errors ($D<1$) causing the interaction not to be observed in some samples. 
 
 
-    To properly interpret $\lambda$, we need to estimate the variance as well as the MLE. The variance of a Bernoulli experiment is $n\lambda$(1-$\lambda$) and, importantly, describes the variability of the number of successes $k$ for $n$ trials rather than the variance associated with the estimation of $\lambda$. It is, however, straightforward to compute the confidence interval for the MLE of $\lambda$ using any of several methods, including the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull interval} (for details, see [\citealp{Brown2001}]). 
+    % To properly interpret $\lambda$, we need to estimate the variance as well as the MLE. The variance of a Bernoulli experiment is $n\lambda$(1-$\lambda$) and, importantly, describes the variability of the number of successes $k$ for $n$ trials rather than the variance associated with the estimation of $\lambda$. It is, however, straightforward to compute the confidence interval for the MLE of $\lambda$ using any of several methods, including the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull interval} (for details, see [\citealp{Brown2001}]). 
 
 
-    All of the above methods for estimating the variance of $\lambda$ include the number of samples $n$. This means that where the number of samples $n$ is very low (e.g., for rare species), there will be considerable uncertainty around our estimate of $\lambda$. In Fig.~\ref{upper_limits}, we derive the Clopper-Pearson interval to explore how the estimate of $\lambda$ (for true $\lambda = 0$) varies with sample size. At a small sample size, the 95\% confidence interval is nearly (0, 1). To establish that species are not interacting with any acceptable certainty requires tens of observations of the two species co-occurring but not interacting. Most data sets will lack such extensive sampling across all species pairs, but we can still use a Bayesian approach to supplement the available data with other sources of information.
+    % All of the above methods for estimating the variance of $\lambda$ include the number of samples $n$. This means that where the number of samples $n$ is very low (e.g., for rare species), there will be considerable uncertainty around our estimate of $\lambda$. In Fig.~\ref{upper_limits}, we derive the Clopper-Pearson interval to explore how the estimate of $\lambda$ (for true $\lambda = 0$) varies with sample size. At a small sample size, the 95\% confidence interval is nearly (0, 1). To establish that species are not interacting with any acceptable certainty requires tens of observations of the two species co-occurring but not interacting. Most data sets will lack such extensive sampling across all species pairs, but we can still use a Bayesian approach to supplement the available data with other sources of information.
 
 
-    The Bayesian approach combines the MLE of $\lambda$ described above with a prior distribution and a normaliser to give a posterior distribution. Since $\lambda$ is a probability and bounded between 0 and 1, the most appropriate prior distribution is the beta: 
+    We can create a simple Bayesian approach to modelling the probability of an interaction occurring ($\lambda$) by combining a maximum likelihood estimate of $\lambda$ with a prior distribution (described in the next section) and a normalising function. The MLE of $\lambda$, based on the number of observed interactions $k$ and observed co-occurrances $n$ is $\lambda = \frac{k}{n}$. The most appropriate prior distribution for a probability such as $\lambda$ is the beta distribution:
 
     \begin{equation}
           \lambda \sim Beta(\alpha,\beta) , \label{prior}
@@ -218,31 +241,31 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
         \noindent which has two shape parameters, $\alpha$ and $\beta$. 
 
-    Combining the beta-distributed prior with the binomial-distributed MLE of $\lambda$ is straightforward (see~\emph{Appendix S2}). By doing so, we obtain a posterior distribution that follows a beta distribution with new parameters $\alpha'= \alpha+k$ and $\beta'=\beta+n-k$. The weight of the prior on the posterior distribution can be understood from these parameter definitions: the difference between the posterior and the prior will increase with $k$ and $n-k$. In other words, the distribution of $\lambda$ for better-sampled pairs of species will rely less on the information used to build the prior distribution and depend more on the observed data. When plotted, we find the shape of the distribution gets narrower with $k$ and $n$ (Fig.~\ref{Salix_pdfs_cdfs}). 
+    Combining this prior distribution with the MLE of $\lambda$ derived from observed data, we obtain a posterior distribution that also follows a beta distribution with new parameters $\alpha'= \alpha+k$ and $\beta'=\beta+n-k$ (see~\emph{Appendix S2} for details). The weight of the prior on the posterior distribution can be understood from these parameter definitions: the difference between the posterior and the prior will increase with $k$ and $n-k$. In other words, the distribution of $\lambda$ for better-sampled pairs of species will rely less on the information used to build the prior distribution and depend more on the observed data and uncertainty about the probability of the pair interacting will decrease (Fig.~\ref{Salix_pdfs_cdfs}). 
+
+    % R1 suggests removing this - could be in the SI I guess?
+    % \subsubsection*{Moments and other properties}
+
+    %   It is common to perform analyses that require calculating higher-order network properties in interaction networks. The fact that the posterior distribution of $\lambda$ follows a beta distribution makes it straightforward to compute moments and other properties needed for these analyses. 
 
 
-    \subsubsection*{Moments and other properties}
+    %   The \textbf{average} of $\lambda$ is: 
+    %       \begin{equation}
+    %         \bar{\lambda} = \frac{\alpha+k}{\alpha+\beta+n} ,
+    %         \label{mean}
+    %       \end{equation}
 
-      It is common to perform analyses that require calculating higher-order network properties in interaction networks. The fact that the posterior distribution of $\lambda$ follows a beta distribution makes it straightforward to compute moments and other properties needed for these analyses. 
+    %     and its \textbf{variance} is:  
+    %       \begin{equation}
+    %         Var(\lambda|k) = \frac{(\alpha + k)(\beta + n - k)}{(\alpha + \beta + n)^{2}(\alpha + \beta + n +1)}
+    %         \label{variance}
+    %       \end{equation}
 
-
-      The \textbf{average} of $\lambda$ is: 
-          \begin{equation}
-            \bar{\lambda} = \frac{\alpha+k}{\alpha+\beta+n} ,
-            \label{mean}
-          \end{equation}
-
-        and its \textbf{variance} is:  
-          \begin{equation}
-            Var(\lambda|k) = \frac{(\alpha + k)(\beta + n - k)}{(\alpha + \beta + n)^{2}(\alpha + \beta + n +1)}
-            \label{variance}
-          \end{equation}
-
-        The \textbf{mode} of the distribution is:
-          \begin{equation}
-            \hat{\lambda} = \frac{\alpha + k - 1}{\alpha + \beta + n - 2} .
-            \label{mode}
-          \end{equation}
+    %     The \textbf{mode} of the distribution is:
+    %       \begin{equation}
+    %         \hat{\lambda} = \frac{\alpha + k - 1}{\alpha + \beta + n - 2} .
+    %         \label{mode}
+    %       \end{equation}
 
 
     \subsubsection*{Choosing a prior distribution}    
@@ -334,18 +357,26 @@ All data used in this study have been independently published and are accessible
 
 \section*{Boxes}
 
-Can't we just sample more?
+\begin{figure}[h!]
+\caption{\textbf{Why isn't sampling the solution?}
+While sufficient sampling is a vital part of any scientific study, we do not think that an exhortation to "sample more" is the appropriate solution to analysing uncertain interactions. There are four main reasons for this: \\
+\textbf{1)} First, and most importantly, we assume that the majority of researchers are aware that insufficient sampling leads to shoddy data and are sampling as intensively and extensively as their time and budget allow. The development and decreasing price of novel methods such as DNA barcoding and remote sensing can help field researchers to do more with less, but it remains to be seen whether these improvements will be enough to fully-describe large study systems. \\
+\textbf{2)} High sampling effort with a constant methodology will reliably describe some interactions but not others. For example, many insect species are difficult to distinguish except by molecular methods. Non-descructive sampling (e.g., by observing insect flower-visitors) will not allow researchers to separate these cryptic species~\citep{}. Increasing the number of person-hours spent in the field will not change this situation, although of course it will allow more accurate estimations of interaction probabilities for species which \emph{can} be distinguished. Adding another type of sampling (e.g., molecular methods) would reduce the set of interactions which cannot be detected/distinguished, but it will also increase the time, resources, and expertise required to complete the study. \\
+\textbf{3)} High sampling effort in a narrow spatiotemporal window will reliably describe some interactions but not others. Species abundances vary between sites and over time, and some interactions may not occur if one or both partners is rare. In addition, some interactions only occur in brief temporal windows (e.g., flowers of Arctic plants may only open for a few days~\citep{}) or when mediated by other species (e.g., consumption of some shellfish by fish only occurs when the shellfish are heavily parasitised and cannot burrow~\citep{}). Expanding sampling to cover broader ranges of space and time will expand the set of interactions that are observed, but again will increase the time and resources needed. \\
+\textbf{4)}{} Observations of rare species add disproportionately more "zeros" than ones to an interaction matrix. Rare species may appear to be specialists purely because of their rarity~\citep{}. If increasing sampling effort adds many rare species to a network, but each species is observed only one or a few times, it is likely that only a fraction of the rare species' interactions will be included. Note that we should not avoid sampling rare species! It is better to identify species about which we know little as targets for future study than to ignore these species. Nevertheless, sampling which is sufficiently high to identify most species at a site but not most interactions for rare species will underestimate the number of interactions and skew the distribution of interactions to rare species. Targeted sampling of rare species would reduce this problem, but again either increase the cost of a study or take away resources from sampling more abundant species. \\
+Increased or targeted sampling could improve (and, given enough resources, perhaps solve) any one of the above problems. As each places demands on the same limited resource pool, however, it is extremely unlikely that researchers will be able to sample their way out of uncertainty about interactions. To illustrate the scale of sampling needed, we can consider the observation of an interaction as a Bernoulli trial. The number of successes ($k$ observed interaction) over ($n$ observed co-occurrances) trials will follow a binomial distribution (see~\emph{Appendix S2} for a full description of the mathematical framework). In this framework, the maximum likelihood estimate (MLE) for $\lambda$ is:
 
-The obvious solution to the problem of uncertainty in the occurrence and detection of interactions is to increase sampling effort. A high sampling effort will increase the number of observed species and interactions and provide estimates of the interaction probabilities of species which are observed many times. Indeed, an infinitely high sampling effort would reveal the true probabilities of interactions that are detectable using the sampling methodology. Increasing sampling effort does not address the problem of interactions which may be undetectable because one or both species involved is cryptic (as with many parasitoids, which can only be identified using molecular methods~\citep{Carol,Wirta}) or because the interaction occurs at a spatial or temporal scale not considered (can use R's point about brevity of pollination here); unless the increase in sampling effort includes adding detection methods as well as adding sampling periods~\citep{Tomas}. 
+        \begin{equation}
+          \lambda_{MLE} = \frac{k}{n}  .
+          \label{theta_MLE}
+        \end{equation}
+  
 
+    Note that $\lambda$ is not a point estimate but rather a random variable with an unknown distribution. This means that if $k = 0$ in a given sample, this does not necessarily imply that the two species will never interact. Rather, $k = 0$ implies that `no interaction' is the most likely outcome when the species do co-occur but there is nonetheless some chance that the two species \emph{could} interact. In the situation where $k>0$, in contrast, we are sure that the interaction is feasible. $k$ may not equal $n$ if local constraints or detection errors prevent the interaction from being observed in each sample, but we nevertheless know that the interaction does occur.
 
-Such infinite sampling is, of course, impossible. The sampling effort used in a given study is more likely to be constrained by the time and resources available than to be increased until all interactions that ever occur in a system are observed. Given the reality of limited resources for field studies, there are several reasons that sampling alone cannot solve ecology's problem with uncertainty. Note that this is not to say that we should sample \emph{less}. To reduce sampling effort voluntarily would be foolish in the extreme as a lower sampling effort reduces the number of interactions (and non-interactions) that are observed and increases the chance that species will be missed entirely. Rather we assume that researchers are sampling with the maximum effort feasible given constraints on their time, resources, and study systems (e.g., destructive sampling of endangered species may not be permitted even if resources would otherwise allow for such sampling). Under these conditions, some uncertainty will always remain.
-
-First, there is the problem of trade-offs between sampling one site intensively and sampling many sites less thoroughly. Species at a single site are not likely to interact continually (although some interactions, such as parasitism, can be long-term), so a brief sampling window will mean that some interactions do not occur during sampling. Even long-term interactions may not be detected during a brief sampling window if interacting individuals are not among those observed. Sampling a single site intensively, on the other hand, means that interactions which do not occur at the site due to lack of co-occurrance or other factors (e.g., some predator-prey interactions may not occur if the presence of a third species suppresses predator activity). The best way to manage this trade-off will vary with study systems, but in any case finite sampling effort means that some interactions will not be observed due to process or detection uncertainty.
-
-Second, even if we can increase sampling effort, this increased effort will not apply to all species equally. Some species are more common, interact more frequently, or are easier to observe. Given this, increasing sampling effort will give us more information about previously-observed interactions more often than it will reveal previously-unobserved interactions. It is still useful to understand the frequencies of common interactions, but this does not help us to remove "false zeros" from an interaction matrix.
-
-Third, there is the problem that species are added to the network "faster" (relatively speaking) than interactions. If sampling is not sufficient to ensure that all species present have been included (which seems likely except in fairly species-poor systems), the observation of a rare species interacting with some partner will add a single observed interaction (a "one") and many unobserved interactions ("zeros"). Note that the zeros may be true reflections of interactions which do not occur, or they may be "false zeros" reflecting the lack of observations for interactions which do occur. As we accumulate more rare/cryptic/infrequently interacting species in a network, we discover more about what we do not know (i.e., which zeros are "true zeros" and which are not). However, by adding rare species and the disproportionate numbers of unobserved interactions associated with them, increased sampling can \emph{increase} uncertainty around the interaction network. Again, increased sampling, where possible, is not a bad thing because of the increased knowledge about rare species, the interactions we do observe, and the revealing of knowledge gaps. It does not, however, eliminate the problems of uncertainty we focus on here.
+    Importantly, we can estimate the variance of $\lambda$ as well as the MLE; available methods include the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull interval} (for details, see [\citealp{Brown2001}]). Examining the changing variance about $\lambda$ with increasing sample size (Fig.~\ref{upper_limits}), we see that tens of observations are required to establish that two co-occurring species do not interact. Most datasets lack such extensive sampling for some species pairs, especially rare species which may be of particular conservation interest~\citep{Bartomeus2013}. The main advantage of the Bayesian approach we suggest here is that it can reduce uncertainty about interactions involving species with limited numbers of observations.}
+\label{Box1}
+\end{figure}
 
 
 
